--- a/InteractiveWebPage.html
+++ b/InteractiveWebPage.html
@@ -20,7 +20,7 @@
 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
 <h1 class="paraTitle">Day four</h1>
 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-<div><button type="button" id="btn1" class="btn btn-primary .text-danger">Search on google</button>
+<div><button id="color" onclick="btn()" type="button" id="btn1" class="btn btn-primary .text-danger">Change Color</button>
 </div>
 </body>
 <nav class="footerText center">
@@ -32,9 +32,19 @@
 </nav>
 </html>
 <script>
-function btn ()
+function btn (color)
 {
-    
+    document.getElementById('color').onclick = changeColor; 
+    var currentColor = "red";
+    function changeColor() { 
+        if(currentColor == "red"){ 
+           document.body.style.color = "green";
+           currentColor = "green";
+        } else {
+           document.body.style.color = "red";
+           currentColor = "red";
+        } 
+    }
 }
 </script>
 
